pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = data/gnx.pc
$(pkgconfig_DATA): config.status

SUBDIRS =                                                                  \
	build                                                              \
	doc                                                                \
	src                                                                \
	tests
